style: delete useless code
删除无用代码